@@ -1,5 +1,10 @@
 2003-06-27  Richard Hult  <richard@imendio.com>
 
+	* libegg/menu/egg-menu-merge.c: Disable some debug output.
+
+	* src/dh-window.c (window_activate_action): Apply a variant of the
+	patch from bug #17393, by Steve Chaplin to fix the bug.
+
 	* libegg/: Update eggmenu to fix bug #107390, follow toolbar/menu
 	preferences.
 	
